--- a/tests/test_workflow.yaml
+++ b/tests/test_workflow.yaml
@@ -29,3 +29,5 @@ flowdef:
     action: take_picture
     args:
       image_name: test_snapshot.jpg
+      source: webcam.pos
+      target: webcam.pos
