--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,20 +8,19 @@ services:
       dockerfile: ./docker/Dockerfile-wei
     ports:
       - 8000:8000
-    command: python -m wei.server --workcell /wei/tests/test_workcell.yaml --redis_host wei_redis
+    volumes:
+      - ./wei:/wei/wei
+    command: python -m wei.server --workcell /wei/examples/example_workcell_docker.yaml --redis_host wei_redis
     depends_on:
       - wei_redis
   wei_scheduler:
     image: wei
     container_name: wei_scheduler
-    build:
-      context: .
-      dockerfile: ./docker/Dockerfile-wei
-    command: python -m wei.scheduler --workcell /wei/tests/test_workcell.yaml --redis_host wei_redis --server wei_server
+    volumes:
+      - ./wei:/wei/wei
+    command: python -m wei.scheduler --workcell /wei/examples/example_workcell_docker.yaml --redis_host wei_redis --server wei_server
     depends_on:
       - wei_redis
-      - sleeper_node
-      - webcam_node
   wei_redis:
     image: redis
     container_name: wei_redis
@@ -33,18 +32,18 @@ services:
   sleeper_node:
     image: wei
     container_name: sleeper_node
-    build:
-      context: .
-      dockerfile: ./docker/Dockerfile-wei
+    volumes:
+      - ./wei:/wei/wei
     command: python /wei/examples/example_clients/sleep_rest_node.py
     ports:
       - 2000:2000
   webcam_node:
     image: wei
     container_name: webcam_node
-    build:
-      context: .
-      dockerfile: ./docker/Dockerfile-wei
+    privileged: true
+    volumes:
+      - ./wei:/wei/wei
+      - /dev/video0:/dev/video0
     ports:
       - 2001:2001
     command: python /wei/examples/example_clients/webcam_rest_node.py
@@ -64,6 +63,7 @@ services:
       - 8888:8888
     volumes:
       - ./examples:/home/${USER}/examples
+      - ./wei:/home/${USER}/wei/wei
     environment:
       JUPYTER_ENABLE_LAB: "yes"
       JUPYTER_TOKEN: "wei"
