--- a/tests/test_workflow.yaml
+++ b/tests/test_workflow.yaml
@@ -19,6 +19,7 @@ flowdef:
   #These arguments specify the parameters for the action above, in this case, which tower the arm will pull a plate from.
     args:
       t: "5"
+      b: payload.test
   #This represents checks that will take place before the system runs, in this case, there are none specified
     checks: null
   #This is a place for additional notes
