--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,15 +10,17 @@ services:
       - 8000:8000
     volumes:
       - ./wei:/wei/wei
-    command: python -m wei.server --workcell /wei/examples/example_workcell_docker.yaml --redis_host wei_redis
+      - ~/.wei:/root/.wei
+    command: python -m wei.server --workcell /wei/examples/example_workcell_docker.yaml --redis_host wei_redis --port 8000
     depends_on:
       - wei_redis
-  wei_scheduler:
+  wei_engine:
     image: wei
-    container_name: wei_scheduler
+    container_name: wei_engine
     volumes:
       - ./wei:/wei/wei
-    command: python -m wei.scheduler --workcell /wei/examples/example_workcell_docker.yaml --redis_host wei_redis --server wei_server
+      - ~/.wei:/root/.wei
+    command: python -m wei.engine --workcell /wei/examples/example_workcell_docker.yaml --redis_host wei_redis --server wei_server
     depends_on:
       - wei_redis
   wei_redis:
