--- a/examples/example_workflow.yaml
+++ b/examples/example_workflow.yaml
@@ -28,4 +28,4 @@ flowdef:
     module: webcam
     action: take_picture
     args:
-      image_name: test_snapshot.jpg
+      file_name: "snapshot.jpg"
