--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -9,6 +9,8 @@ requests==2.31.0
 ulid-py==1.1.0
 pyzmq==25.1.1
 redis==4.2.2
+python-dotenv==1.0.0
 
 pottery==3.0.0
-
+lupa==2.0
+fakeredis==2.20.0
