Cleaning up examples, README, mypy and autoformatting

--- a/setup.cfg
+++ b/setup.cfg
@@ -40,6 +40,7 @@ strict_optional = True
 plugins = pydantic.mypy
 strict = True
 disallow_untyped_defs = True
+implicit_reexport = True
 
 [pydocstyle]
 inherit = false
