Add Pre-Commit for automatted formatting and linting

--- a/setup.cfg
+++ b/setup.cfg
@@ -46,3 +46,7 @@ implicit_reexport = True
 inherit = false
 select = D100, D101, D102, D103, D104, D105, D106, D107
 match = .*\.py
+
+[isort]
+profile = black
+skip_gitignore = True
