WIP: ruff + pdb + pyproject.toml

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,36 +1,26 @@
 repos:
--   repo: https://github.com/pre-commit/pre-commit-hooks
+  - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.5.0
     hooks:
-    -   id: check-yaml
-    -   id: check-json
-    -   id: check-ast
-    -   id: requirements-txt-fixer
-    -   id: check-merge-conflict
-    -   id: check-added-large-files
-    -   id: mixed-line-ending
-    -   id: end-of-file-fixer
-    -   id: trailing-whitespace
--   repo: https://github.com/psf/black
-    rev: 23.11.0
-    hooks:
-    -   id: black
--   repo: https://github.com/pycqa/flake8
-    rev: '6.1.0'
-    hooks:
-    -   id: flake8
--   repo: https://github.com/pycqa/isort
-    rev: '5.12.0'
-    hooks:
-      - id: isort
--   repo: https://github.com/kynan/nbstripout
+      - id: check-yaml
+      - id: check-json
+      - id: check-toml
+      - id: check-ast
+      - id: check-merge-conflict
+      - id: check-added-large-files
+      - id: mixed-line-ending
+      - id: end-of-file-fixer
+      - id: trailing-whitespace
+  - repo: https://github.com/kynan/nbstripout
     rev: 0.6.1
     hooks:
       - id: nbstripout
--   repo: https://github.com/pycqa/pydocstyle
-    rev: 6.3.0
+  - repo: https://github.com/astral-sh/ruff-pre-commit
+    # Ruff version.
+    rev: v0.1.5
     hooks:
-    -   id: pydocstyle
-        args:
-        - --select="D100, D101, D102, D103, D104, D105, D106, D107"
-        - --match=".*/.py"
+      # Run the linter.
+    #   - id: ruff
+    #     args: [--fix]
+      # Run the formatter.
+      - id: ruff-format
