--- a/setup.cfg
+++ b/setup.cfg
@@ -20,33 +20,33 @@ exclude =
 [options.package_data]
 * = **/*.txt, **/*.yaml, **/*.json
 
-[flake8]
-exclude = .git
-max-line-length = 118
-extend-ignore = E203,W503,E501,E302,E231
-max-complexity = 14
-
-[tool:pytest]
-# https://docs.pytest.org/en/stable/customize.html
-addopts = -x
-junit_family=xunit1
-filterwarnings = ignore::DeprecationWarning
-
-[mypy]
-show_error_codes = True
-check_untyped_defs = True
-follow_imports = normal
-strict_optional = True
-plugins = pydantic.mypy
-strict = True
-disallow_untyped_defs = True
-implicit_reexport = True
-
-[pydocstyle]
-inherit = false
-select = D100, D101, D102, D103, D104, D105, D106, D107
-match = .*\.py
-
-[isort]
-profile = black
-skip_gitignore = True
+#[flake8]
+#exclude = .git
+#max-line-length = 118
+#extend-ignore = E203,W503,E501,E302,E231
+#max-complexity = 14
+#
+#[tool:pytest]
+## https://docs.pytest.org/en/stable/customize.html
+#addopts = -x
+#junit_family=xunit1
+#filterwarnings = ignore::DeprecationWarning
+#
+#[mypy]
+#show_error_codes = True
+#check_untyped_defs = True
+#follow_imports = normal
+#strict_optional = True
+#plugins = pydantic.mypy
+#strict = True
+#disallow_untyped_defs = True
+#implicit_reexport = True
+#
+#[pydocstyle]
+#inherit = false
+#select = D100, D101, D102, D103, D104, D105, D106, D107
+#match = .*\.py
+#
+#[isort]
+#profile = black
+#skip_gitignore = True
