--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "wei"
 version = "0.5.0"
-description = "Workcell Execution Interface"
+description = "The Rapid Prototyping Laboratory's Workcell Execution Interface."
 authors = [
     {name = "Tobias Ginsburg, Rafael Vescovi, Ryan D. Lewis, Kyle Hippe, Doga Ozgulbas, Casey Stone", email = "ravescovi@anl.gov"},
 ]
@@ -33,6 +33,9 @@ examples = [
 Homepage = "https://github.com/AD-SDL/wei"
 Downloads = "https://github.com/AD-SDL/wei/archive/refs/tags/0.5.0.tar.gz"
 
+######################
+# Build Info + Tools #
+######################
 
 [build-system]
 requires = ["pdm-backend"]
@@ -44,7 +47,6 @@ server = "python3 -m wei.server"
 
 [tool.pdm.dev-dependencies]
 dev = [
-    "black[jupyter]",
     "build",
     "mypy",
     "pre-commit",
