--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -15,6 +15,8 @@ jobs:
           python-version: 3.9
       - name: Setup PDM
         uses: pdm-project/setup-pdm@v3
+        with:
+          python-version: 3.9
       - name: Install dependencies
         run: pdm install
       - name: Test with pytest
