--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ dependencies = [
     'requests>=2.31.0, <2.32',
     'ulid-py>=1.1.0, <1.2',
     'uvicorn>=0.21, <0.22',
+    "httpx<0.26,>0.25",
 ]
 requires-python = ">=3.8.1"
 readme = "README.md"
@@ -157,7 +158,10 @@ line-ending = "auto"
 # https://docs.pytest.org/en/stable/customize.html
 addopts = "-x"
 junit_family="xunit1"
-filterwarnings = "ignore::DeprecationWarning"
+filterwarnings = [
+    "ignore::DeprecationWarning",
+    "ignore::pottery.exceptions.InefficientAccessWarning",
+]
 
 [tool.mypy]
 # https://mypy.readthedocs.io/en/stable/config_file.html#using-a-pyproject-toml
