--- a/.gitignore
+++ b/.gitignore
@@ -230,6 +230,9 @@ cython_debug/
 !.vscode/extensions.json
 !.vscode/*.code-snippets
 
+# Vim
+*.swp
+
 # Local History for Visual Studio Code
 .history/
 
@@ -284,3 +287,9 @@ logs/
 # Image Artifacts
 **/*.jpg
 
+# PDM
+.pdm-python
+.pdm-build/*
+
+# Ruff
+.ruff_cache/*
