--- a/examples/example_yaml/example_workflow.yaml
+++ b/examples/example_yaml/example_workflow.yaml
@@ -1,4 +1,4 @@
-name: Test - Workflow
+name: Test_Workflow
 metadata:
   author: Tobias Ginsburg, Kyle Hippe, Ryan D. Lewis
   info: Example workflow for WEI
