--- a/docker/Dockerfile-wei
+++ b/docker/Dockerfile-wei
@@ -1,6 +1,6 @@
 FROM python:3.11
 
-RUN git clone https://github.com/AD-SDL/wei.git -b 0_5_cleanup /wei
+RUN git clone https://github.com/AD-SDL/wei.git -b main /wei
 
 RUN pip install pdm
 
