--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,8 @@ services:
     volumes:
       - ./wei:/wei/wei
       - ~/.wei:/root/.wei
-    command: pdm run server --workcell /wei/examples/example_yaml/example_workcell_docker.yaml --redis_host wei_redis --port 8000
+      - ~/.globus_compute:/root/.globus_compute
+    command: pdm run server --workcell /wei/examples/example_yaml/example_workcell_docker.yaml --redis_host wei_redis --port 8000 --use_kafka True
     depends_on:
       - wei_redis
   wei_engine:
@@ -20,7 +21,6 @@ services:
     volumes:
       - ./wei:/wei/wei
       - ~/.wei:/root/.wei
-      - ~/.globus_compute:~/.globus_compute
     command: pdm run engine --workcell /wei/examples/example_yaml/example_workcell_docker.yaml --redis_host wei_redis --server wei_server
     depends_on:
       - wei_redis
