--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,8 @@ dependencies = [
     'ulid-py>=1.1.0, <1.2',
     'uvicorn>=0.21, <0.22',
     "httpx<0.26,>0.25",
+    "diaspora_event_sdk",
+    "kafka-python"
 ]
 requires-python = ">=3.8.1"
 readme = "README.md"
