--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
-name = "wei"
-version = "0.5.1.dev1"
+name = "ad_sdl.wei"
+version = "0.5.1.dev2"
 description = "The Rapid Prototyping Laboratory's Workcell Execution Interface."
 authors = [
     {name = "Rafael Vescovi", email = "ravescovi@anl.gov"},
