--- a/workcell_defs/test_workcell.yaml
+++ b/workcell_defs/test_workcell.yaml
@@ -2,12 +2,9 @@ name: Test_Workcell
 
 #Info about data processing and location of the workcell
 config:
-  funcx_local_ep: ""
-  globus_local_ep: ""
-  globus_search_index: ""
-  globus_portal_ep: ""
-  globus_group: ""
   workcell_origin_coordinates: [0, 0, 0, 0, 0, 0]
+  redis_host: "wei_redis"
+  # server_host: "wei_server"
 
 #List of all components accessible in this workcell
 modules:
