--- a/tests/Dockerfile.test
+++ b/tests/Dockerfile.test
@@ -2,7 +2,8 @@ FROM ghcr.io/ad-sdl/wei
 
 # Set up user permissions for mounting volumes with the same user as the host
 # This prevents a lot of permission issues
-# Note: if you're not using the makefile/compose.yaml, you'll need to pass these args in yourself
+# Note: if you're not using the makefile and/or compose.yaml,
+#       you'll need to pass these args in yourself
 ARG USER_ID=1000
 ARG GROUP_ID=1000
 ARG CONTAINER_USER=wei
@@ -22,3 +23,9 @@ WORKDIR /home/${CONTAINER_USER}
 ######################################
 # App specific changes go below here #
 ######################################
+
+# Add python packages to path
+ENV PATH="$PATH:/home/${CONTAINER_USER}/.local/bin"
+
+RUN --mount=type=cache,target=/home/${CONTAINER_USER}/.cache,uid=${USER_ID},gid=${GROUP_ID} \
+    pip install -r $HOME/wei/requirements/dev.txt
