--- a/workcell_defs/test_workcell.yaml
+++ b/workcell_defs/test_workcell.yaml
@@ -4,7 +4,8 @@ name: Test_Workcell
 config:
   workcell_origin_coordinates: [0, 0, 0, 0, 0, 0]
   redis_host: "wei_redis"
-  # server_host: "wei_server"
+  server_host: "wei_server"
+  server_port: 8000
 
 #List of all components accessible in this workcell
 modules:
