--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -1,4 +1,4 @@
-name: Docker Build and Publish
+name: Docker Build Only
 
 # This workflow uses actions that are not certified by GitHub.
 # They are provided by a third-party and are governed by
@@ -7,9 +7,10 @@ name: Docker Build and Publish
 
 on:
   push:
-    branches: [ "main" ]
-    # Publish semver tags as releases.
-    tags: [ '*' ]
+    branches: [ "!main" ]
+  pull_request:
+    branches: [ "*" ]
+
 
 env:
   # Use docker.io for Docker Hub if empty
@@ -21,7 +22,6 @@ env:
 jobs:
   build:
 
-    environment: production
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -51,12 +51,12 @@ jobs:
 
       # Build and push Docker image with Buildx (don't push on PR)
       # https://github.com/docker/build-push-action
-      - name: Build and push Docker image
+      - name: Build Docker image
         id: build-and-push
         uses: docker/build-push-action@0565240e2d4ab88bba5387d719585280857ece09 # v5.0.0
         with:
           context: .
-          push: true
+          push: false
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
             #cache-from: type=gha
