Improvements to makefiles based on template workcell; more robust register_diaspora

--- a/.github/workflows/pypi-publish.yml
+++ b/.github/workflows/pypi-publish.yml
@@ -7,7 +7,7 @@ on:
     tags: [ '*' ]
 
 jobs:
-  build:
+  publish_pypi:
     runs-on: ubuntu-latest
     environment: production
     permissions:
