--- a/tests/Dockerfile.test
+++ b/tests/Dockerfile.test
@@ -1,27 +1,12 @@
 FROM ghcr.io/ad-sdl/wei
 
-# Set up user permissions for mounting volumes with the same user as the host
-# This prevents a lot of permission issues
-# Note: if you're not using the makefile and/or compose.yaml,
-#       you'll need to pass these args in yourself
-ARG USER_ID=1000
-ARG GROUP_ID=1000
-ARG CONTAINER_USER=wei
-ARG CONTAINER_USER_ID=1000
-ARG CONTAINER_GROUP_ID=1000
-USER root
-RUN userdel -f ${CONTAINER_USER} &&\
-    if getent group ${CONTAINER_USER}; then groupdel ${CONTAINER_USER}; fi &&\
-    groupadd -g ${GROUP_ID} ${CONTAINER_USER} &&\
-    useradd -l -u ${USER_ID} -g ${CONTAINER_USER} ${CONTAINER_USER} &&\
-    chown --changes --silent --no-dereference --recursive \
-        --from=${CONTAINER_USER_ID}:${CONTAINER_GROUP_ID} ${USER_ID}:${GROUP_ID} \
-        /home/$CONTAINER_USER
+ARG USER_ID=9999
+ARG GROUP_ID=9999
+ARG CONTAINER_USER=app
 USER ${CONTAINER_USER}
-WORKDIR /home/${CONTAINER_USER}
 
 ######################################
-# App specific changes go below here #
+# App specific changes go here       #
 ######################################
 
 # Add python packages to path
@@ -29,3 +14,6 @@ ENV PATH="$PATH:/home/${CONTAINER_USER}/.local/bin"
 
 RUN --mount=type=cache,target=/home/${CONTAINER_USER}/.cache,uid=${USER_ID},gid=${GROUP_ID} \
     pip install -r $HOME/wei/requirements/dev.txt
+
+######################################
+USER root
