--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -9,7 +9,7 @@ certifi==2023.11.17
 cffi==1.16.0
 charset-normalizer==3.3.2
 click==8.1.7
-colorama==0.4.6; os_name == "nt" or sys_platform == "win32" or platform_system == "Windows"
+colorama==0.4.6; platform_system == "Windows"
 cryptography==41.0.7
 deprecated==1.2.14
 devtools==0.12.2
@@ -34,7 +34,7 @@ pydantic-core==2.10.1
 pygments==2.17.2
 pyjwt==2.8.0
 python-multipart==0.0.6
-pyyaml==6.0.1
+PyYAML==6.0.1
 pyzmq==25.1.2
 redis==4.2.2
 requests==2.31.0
