Fix WEI name confusion

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "ad_sdl.wei"
 version = "0.5.2"
-description = "The Rapid Prototyping Laboratory's Workcell Execution Interface."
+description = "The Rapid Prototyping Laboratory's Workflow Execution Interface."
 authors = [
     {name = "Rafael Vescovi", email = "ravescovi@anl.gov"},
     {name = "Tobias Ginsburg", email = "tginsburg@anl.gov"},
