--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -25,7 +25,7 @@ httpx==0.25.2
 idna==3.6
 kafka-python==2.0.2
 lupa==2.0
-mmh3==4.0.1
+mmh3==4.1.0
 packaging==23.2
 pottery==3.0.0
 pycparser==2.21
@@ -34,7 +34,7 @@ pydantic-core==2.10.1
 pygments==2.17.2
 pyjwt==2.8.0
 python-multipart==0.0.6
-PyYAML==6.0.1
+pyyaml==6.0.1
 pyzmq==25.1.2
 redis==4.2.2
 requests==2.31.0
