--- a/tests/test_workflow.yaml
+++ b/tests/test_workflow.yaml
@@ -18,17 +18,14 @@ flowdef:
     action: sleep
   #These arguments specify the parameters for the action above, in this case, which tower the arm will pull a plate from.
     args:
-      t: "5"
-      b: payload.test
+      t: payload.wait_time
   #This represents checks that will take place before the system runs, in this case, there are none specified
     checks: null
   #This is a place for additional notes
-    comment: Sleep for 5 seconds before we take a picture
+    comment: Sleep for `payload.wait_time` seconds before we take a picture
 
   - name: Take Picture
     module: webcam
     action: take_picture
     args:
       image_name: test_snapshot.jpg
-      source: webcam.pos
-      target: webcam.pos
