--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,7 +28,7 @@ dependencies = [
     'ulid-py>=1.1.0, <1.2',
     'uvicorn>=0.21, <0.22',
     "httpx<0.26,>0.25",
-    "diaspora_event_sdk>=0.0.18",
+    "diaspora_event_sdk>=0.1.1",
     "kafka-python"
 ]
 
@@ -159,7 +159,7 @@ line-ending = "auto"
 
 [tool.pytest.ini_options]
 # https://docs.pytest.org/en/stable/customize.html
-addopts = "-x"
+addopts = "-x --ignore-glob=**/test_module/*"
 junit_family="xunit1"
 filterwarnings = [
     "ignore::DeprecationWarning",
