--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -6,15 +6,13 @@ anyio==3.7.1
 asttokens==2.4.1
 async-timeout==4.0.3
 certifi==2023.11.17
-cffi==1.16.0; implementation_name == "pypy" or platform_python_implementation != "PyPy"
+cffi==1.16.0
 charset-normalizer==3.3.2
 click==8.1.7
-colorama==0.4.6; sys_platform == "win32" or os_name == "nt" or platform_system == "Windows"
 cryptography==42.0.1
 deprecated==1.2.14
 devtools==0.12.2
-diaspora-event-sdk==0.0.19
-exceptiongroup==1.2.0; python_version < "3.11"
+diaspora-event-sdk==0.1.2
 executing==2.0.1
 fakeredis==2.20.1
 fastapi==0.103.2
@@ -28,13 +26,13 @@ lupa==2.0
 mmh3==4.1.0
 packaging==23.2
 pottery==3.0.0
-pycparser==2.21; implementation_name == "pypy" or platform_python_implementation != "PyPy"
+pycparser==2.21
 pydantic==2.4.2
 pydantic-core==2.10.1
 pygments==2.17.2
 pyjwt==2.8.0
 python-multipart==0.0.6
-pyyaml==6.0.1
+PyYAML==6.0.1
 pyzmq==25.1.2
 redis==4.2.2
 requests==2.31.0
