--- a/tests/workflows/test_workflow.yaml
+++ b/tests/workflows/test_workflow.yaml
@@ -12,44 +12,52 @@ modules:
 flowdef:
   #This defines a step in the workflow. Each step represents an action on a single module
   #This is a human legible name for the step
-  - name: Transfer get plate
+  - name: Get plate
   #This defines which module the action will run on, in this case, a test node that simply sleeps for t seconds
     module: transfer
   #This tells the module which action in its library to run, in this case grabbing a wellplate from one of the storage tower
     action: transfer
   #These arguments specify the parameters for the action above, in this case, which tower the arm will pull a plate from.
     args:
-      t: "2"
-      target: "synthesis.pos"
+      target: "transfer.pos"
   #This represents checks that will take place before the system runs, in this case, there are none specified
     checks: null
   #This is a place for additional notes
+    comment: Get a new plate
+
+  - name: Transfer plate to synthesis
+    module: transfer
+    action: transfer
+    args:
+      source: transfer.pos
+      target: synthesis.pos
+    checks: null
     comment: put a plate in first position
 
-  - name: synthesize
+  - name: Synthesize foobar
     module: synthesis
-    action: run
+    action: synthesize
     args:
-      t: "2"
+      foo: 2.0
+      bar: 0.5
+    comment: Combines foo and bar to produce foobar
 
-  - name: Transfer synth 2 measure
+  - name: Transfer sample to measure
     module: transfer
-    action: run
+    action: transfer
     args:
       source: synthesis.pos
       target: measure.pos
-      t: "2"
 
-  - name: measure
+  - name: Measure foobar
     module: measure
-    action: run
-    args:
-      t: "2"
+    action: measure
+    args: {}
+    comment: Measure the amount of foobar in the sample
 
-  - name: Transfer measure 2 trash
+  - name: Discard sample
     module: transfer
-    action: run
+    action: transfer
     args:
       source: measure.pos
       target: wc.trash
-      t: "2"
